--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
@@ -60,7 +60,7 @@
             [Inject]
             [Bindable]
             /**
-             * We need to have Granites Identity injected.
+             * Inject identity to ensure security.
              */
             public var identity:Identity;
             [Inject]
