--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitTypeView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitTypeView.mxml
@@ -24,7 +24,7 @@
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" show="onShow()" backgroundColor="#C2DAEF" xmlns:comp="org.openwms.web.flex.client.component.*">
 
     <mx:Metadata>
-        [Name("transportUnitTypeView")]
+        [Name]
         [ManagedEvent(name="LOAD_ALL_TRANSPORT_UNIT_TYPES")]
         [ManagedEvent(name="LOAD_ALL_LOCATION_TYPES")]
         [ManagedEvent(name="LOAD_TUT_RULES")]
