--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
@@ -21,7 +21,7 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#C2DAEF" show="onShow()">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:comm="org.openwms.web.flex.client.common.component.*" width="100%" height="100%" backgroundColor="#C2DAEF" show="onShow()">
 
     <mx:Metadata>
         [Name]
@@ -29,15 +29,18 @@
         [ManagedEvent(name="LOAD_ALL_LOCATION_TYPES")]
         [ManagedEvent(name="LOAD_ALL_LOCATION_GROUPS")]
         [ManagedEvent(name="SAVE_LOCATION")]
+        [ManagedEvent(name="LOC.REMOVE_MESSAGES")]
     </mx:Metadata>
 
     <mx:Script>
         <![CDATA[
+        	import org.openwms.core.domain.system.Message;
         	import mx.controls.Alert;
         	import mx.managers.PopUpManager;
             import mx.controls.dataGridClasses.DataGridColumn;
             import mx.collections.ArrayCollection;
             import mx.events.ListEvent;
+            import flash.events.MouseEvent;
 			
         	import org.granite.tide.spring.Identity;
         	
@@ -71,54 +74,19 @@
             private var listLocationGroups:ArrayCollection=new ArrayCollection();
 
             private function onShow():void {
-                if (commonModelLocator.allLocations.length == 0) {
-                    dispatchEvent(new LocationEvent(LocationEvent.LOAD_ALL_LOCATIONS));
-                }
                 if (commonModelLocator.allLocationTypes.length == 0) {
                 	dispatchEvent(new LocationTypeEvent(LocationTypeEvent.LOAD_ALL_LOCATION_TYPES));
                 }
                 if (commonModelLocator.allLocationGroups.length == 0) {
                 	dispatchEvent(new LocationGroupEvent(LocationGroupEvent.LOAD_ALL_LOCATION_GROUPS));
                 }
+                dispatchEvent(new LocationEvent(LocationEvent.LOAD_ALL_LOCATIONS));
             }
 
             private function onRowClick(event:ListEvent):void {
             	selected = event.currentTarget.selectedItem as Location;
-                locationGroupCB.selectedIndex = commonModelLocator.allLocationGroups.getItemIndex(selected.locationGroup);
-                locationTypeCB.selectedIndex = commonModelLocator.allLocationTypes.getItemIndex(selected.locationType);
                 if (selected.lastAccess != null) {
                     lastAccessTxt.text = commonModelLocator.dateTimeFormatter.format(selected.lastAccess);
-                }
-            }
-
-            private function locationIdField(item:Object, dg:DataGridColumn):String {
-                return item[dg.dataField];
-            }
-
-            private function locationGroupField(item:Object, dg:DataGridColumn):String {
-                if (item.locationGroup != null) {
-                    return item.locationGroup[dg.dataField];
-                }
-                return "n/a";
-            }
-
-            private function formatDateField(item:Object, dg:DataGridColumn):String {
-                if (item.lastAccess != null) {
-                    return commonModelLocator.dateTimeFormatter.format(item.lastAccess);
-                }
-                return "n/a";
-            }
-
-            private function sortLocationGroup(obj1:Object, obj2:Object):int {
-                var name1:String = obj1.locationGroup != null ? obj1.locationGroup.name : "";
-                var name2:String = obj2.locationGroup != null ? obj2.locationGroup.name : "";
-                
-                if(name1 < name2) {
-                    return -1;
-                } else  if(name1 > name2) {
-                    return 1;
-                } else {
-                    return 0;
                 }
             }
 
@@ -127,8 +95,6 @@
              */
             private function saveLocation():void {
                var bindings:Array = [new BindingProperty(selected, "description", descriptionTxt, "text"),
-                                     new BindingProperty(selected, "locationGroup", locationGroupCB, "selectedItem"),  
-                                     new BindingProperty(selected, "locationType", locationTypeCB, "selectedItem"),  
                                      new BindingProperty(selected, "noMaxTransportUnits", noMaxTransportUnitsTxt, "value"),
                                      new BindingProperty(selected, "plcState", plcStateTxt, "text"),
                                      new BindingProperty(selected, "countingActive", countingActiveChk, "selected"),
@@ -152,6 +118,53 @@
                 var event:LocationEvent = new LocationEvent(LocationEvent.LOAD_ALL_LOCATIONS);
                 dispatchEvent(event);
             }
+            
+            private function removeMessage(event:MouseEvent) : void {
+            	if (messagesLst.selectedItems.length == 0) {
+            		Alert.show("Select one or more Messages to be removed");
+            		return;
+            	}
+                var e:LocationEvent = new LocationEvent(LocationEvent.REMOVE_MESSAGES);
+                e.data = {id:selected.id, messages:messagesLst.selectedItems};
+                dispatchEvent(e);            	
+            }
+
+			/**   ------------------ Format functions ------------------   **/
+            private function locationIdField(item:Object, dg:DataGridColumn):String {
+                return item.locationId[dg.dataField];
+            }
+
+            private function locationGroupField(item:Object, dg:DataGridColumn):String {
+                if (item.locationGroup != null) {
+                    return item.locationGroup[dg.dataField];
+                }
+                return "n/a";
+            }
+
+            private function formatDateField(item:Object, dg:DataGridColumn):String {
+                if (item.lastAccess != null) {
+                    return commonModelLocator.dateTimeFormatter.format(item.lastAccess);
+                }
+                return "n/a";
+            }
+
+            private function formatMessage(item:Message):String {
+                return item.toString();
+            }
+
+			/**   ------------------ Sort functions ------------------   **/
+            private function sortLocationGroup(obj1:Object, obj2:Object):int {
+                var name1:String = obj1.locationGroup != null ? obj1.locationGroup.name : "";
+                var name2:String = obj2.locationGroup != null ? obj2.locationGroup.name : "";
+                
+                if(name1 < name2) {
+                    return -1;
+                } else  if(name1 > name2) {
+                    return 1;
+                } else {
+                    return 0;
+                }
+            }
 
         ]]>
     </mx:Script>
@@ -173,19 +186,7 @@
             
             <mx:Label text="Description" textAlign="left" x="10" y="34"/>
             <mx:TextArea id="descriptionTxt" text="{selected.description}" width="200" height="64" x="95" y="33"/>
-            <mx:HRule x="10" y="400" width="297"/>
             <mx:HRule x="10" y="10" width="360" strokeWidth="0"/>
-            
-            <mx:Image x="10" y="410" mouseChildren="false" source="@Embed(source='/assets/images/LocationGroup.png')"/>
-            <mx:Label text="Location Group" textAlign="left" x="34" y="414" fontWeight="bold"/>
-            <mx:ComboBox id="locationGroupCB" labelField="name" prompt="n/a" selectedIndex="{commonModelLocator.allLocationGroups.getItemIndex(selected)}" dataProvider="{commonModelLocator.allLocationGroups}" x="95" y="440"/>
-            <mx:CheckBox id="locationGroupCountingActiveChk" x="95" y="470" label="Counting Active in Location Group" selected="{selected.locationGroupCountingActive}"/>
-            <mx:HRule x="8" y="500" width="297"/>
-            
-            <mx:Image x="10" y="510" mouseChildren="false" source="@Embed(source='/assets/images/LocationType.png')"/>
-            <mx:Label text="Location Type" textAlign="left" x="34" y="510" fontWeight="bold"/>
-            <mx:ComboBox id="locationTypeCB" labelField="type" prompt="n/a" selectedIndex="{commonModelLocator.allLocationTypes.getItemIndex(selected.locationType)}" dataProvider="{commonModelLocator.allLocationTypes}" x="95" y="562"/>
-            <mx:Text x="95" y="536" text="{locationTypeCB.selectedItem.description}"/>
             
             <mx:Label text="Max. Transport Units" textAlign="left" x="10" y="105"/>
             <mx:NumericStepper id="noMaxTransportUnitsTxt" value="{selected.noMaxTransportUnits}" width="40" x="255" y="103"/>
@@ -205,24 +206,30 @@
             <mx:Text id="lastAccessTxt" x="95" y="277" text="{selected.lastAccess}"/>
             
             <mx:Label x="10" y="329" text="Messages"/>
-            <mx:TextArea x="95" y="328" width="180" height="64"/>
-            <mx:Image x="283" y="328" height="16" width="16" mouseChildren="false" source="@Embed(source='assets/images/icons/minus.png')"/>
-        
+            <mx:List id="messagesLst" labelFunction="formatMessage" dataProvider="{selected.messages}" allowMultipleSelection="true" x="95" y="328" width="180" height="64"/>
+            <mx:Image x="283" y="328" height="16" width="16" enabled="{selected.messages.length > 0}" mouseChildren="false" source="@Embed(source='assets/images/icons/minus.png')" click="removeMessage(event);"/>
+
+            <mx:HRule x="10" y="400" width="297"/>
+            <mx:Image x="10" y="410" mouseChildren="false" source="@Embed(source='/assets/images/LocationGroup.png')"/>
+            <mx:Label text="Location Group" textAlign="left" x="34" y="414" fontWeight="bold"/>
+            <mx:Label id="locationGroupLbl" text="{selected.locationGroup.name}" x="95" y="440"/>
+            <mx:CheckBox id="locationGroupCountingActiveChk" x="95" y="470" label="Counting Active in Location Group" selected="{selected.locationGroupCountingActive}"/>
+
+            <mx:HRule x="8" y="500" width="297"/>
+            <mx:Image x="10" y="510" mouseChildren="false" source="@Embed(source='/assets/images/LocationType.png')"/>
+            <mx:Label text="Location Type" textAlign="left" x="34" y="510" fontWeight="bold"/>
+            <mx:Label id="locationTypeLbl" text="{selected.locationType.type}" x="95" y="536"/>
+            <mx:Text x="95" y="562" text="{selected.locationType.description}"/>
+                    
         </mx:Canvas>
         <mx:DataGrid id="locationsList" allowMultipleSelection="true" sortableColumns="true" dataProvider="{commonModelLocator.allLocations}" change="onRowClick(event)" height="100%" width="100%">
             <mx:columns>
-                <mx:DataGridColumn dataField="locationId" labelFunction="locationIdField" editable="false" width="45">
-                    <mx:headerRenderer>
-                        <mx:Component>
-                            <mx:Label text="Area" styleName="headerArea"/>
-                        </mx:Component>
-                    </mx:headerRenderer>
-                </mx:DataGridColumn>
-                <mx:DataGridColumn headerText="Aisle" dataField="locationId" labelFunction="locationIdField" editable="false" width="45"/>
-                <mx:DataGridColumn headerText="X" dataField="locationId" labelFunction="locationIdField" editable="false" width="45"/>
-                <mx:DataGridColumn headerText="Y" dataField="locationId" labelFunction="locationIdField" editable="false" width="45"/>
-                <mx:DataGridColumn headerText="Z" dataField="locationId" labelFunction="locationIdField" editable="false" width="45"/>
-                <mx:DataGridColumn headerText="Location Group" dataField="locationGroup" sortCompareFunction="sortLocationGroup" editable="false"/>
+            	<comm:CoordinateColumn column="area" headerText="Area" dataField="area" labelFunction="locationIdField" editable="false" width="45" />
+                <comm:CoordinateColumn column="aisle" headerText="Aisle" dataField="aisle" labelFunction="locationIdField" editable="false" width="45"/>
+                <comm:CoordinateColumn column="x" headerText="X" dataField="x" labelFunction="locationIdField" editable="false" width="45"/>
+                <comm:CoordinateColumn column="y" headerText="Y" dataField="y" labelFunction="locationIdField" editable="false" width="45"/>
+                <comm:CoordinateColumn column="z" headerText="Z" dataField="z" labelFunction="locationIdField" editable="false" width="45"/>
+                <mx:DataGridColumn headerText="Location Group" dataField="locationGroup" editable="false"/>
                 <mx:DataGridColumn headerText="Description" dataField="description" editable="true"/>
                 <mx:DataGridColumn headerText="Counting Active" dataField="countingActive" editable="true">
                     <mx:itemRenderer>
